feat(articles): update owned articles
